--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit==1.29.0
-streamlit-webrtc==0.47.1
-opencv-python-headless==4.8.1.78
+streamlit
+streamlit-webrtc==0.45.0
+opencv-python-headless==4.5.5.64
 pyzbar==0.1.9
-av==11.0.0
-numpy==1.24.4
