--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit
+streamlit==1.28.2
+opencv-python-headless==4.8.0.74
 streamlit-webrtc==0.45.0
-opencv-python-headless==4.5.5.64
 pyzbar==0.1.9
+av==10.0.0
+numpy==1.24.3
